-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
None
-
f08c8cf64 (dev), 0165fbdfe (6.8)
If you press anywhere but a point in the graph, there is a crash due to null pointer being dereferenced.
For Gerrit Dashboard: QTBUG-130507 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
599453,2 | Fix crash when clicking a PointRenderer graph | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
600434,2 | Fix crash when clicking a PointRenderer graph | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |