Fix crash when clicking a PointRenderer graph

Fixes: QTBUG-130507
Change-Id: Id3ab07d84d0e612f3ad8902b93fb9319ec52b3bd
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit f08c8cf64d192d5c85622ffde573b55305b1d97f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>